🐛 Pull Request 된 코드 오류 수정 #2
Path.of() -> Paths.get()